--- a/roles/nginx/vars/main.yml
+++ b/roles/nginx/vars/main.yml
@@ -2,11 +2,11 @@
 
 # Web Application Configurations
 
-app_port: 8983
+app_port: 8080
 
-access_log:
+access_log: /var/log/nginx/access.log
 
-error_log:
+error_log: /var/log/nginx/error.log
 
 # Nginx & Application config file path
 
