--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: restart nginx
-  service: name=nginx state=restarted enabled=yes
+- name: start nginx
+  service: name=nginx state=started enabled=yes
 
-#- name: enable nginx
-#  service: name=nginx enabled=yes
+- name: restart nginx
+  service: name=nginx state=restarted
