--- a/roles/nginx/vars/RedHat.yml
+++ b/roles/nginx/vars/RedHat.yml
@@ -19,3 +19,5 @@ nginx_config_path: /etc/nginx/nginx.conf
 app_config_path: /etc/nginx/config/app.conf
 
 app_config_path_link: /etc/nginx/conf.d/default.conf
+
+nginx_config_root: /etc/nginx/conf.d
