--- a/roles/consul/tasks/common.yml
+++ b/roles/consul/tasks/common.yml
@@ -1,9 +1,9 @@
 ---
+
 #Change hostname of remote server
 - name: Change hostname of remote server
   hostname:
-    #name: "consul-server-1" "{{ groups['host'] }}"
-    name: "{{ hostvars['host'].hostname }}"
+    name: "{{ hostname }}"
   tags: [change_hostname]
 
 # Make change in hosts file
@@ -11,7 +11,7 @@
   lineinfile:
     dest: /etc/hosts
     regexp: '^127\.0\.0\.1[ \t]+localhost'
-    line: "127.0.0.1 localhost {{ hostvars['host'].hostname }}"
+    line: "127.0.0.1 localhost {{ hostname }}"
     state: present
   tags: [change_hosts_file]
 
