--- a/roles/java8/vars/RedHat.yml
+++ b/roles/java8/vars/RedHat.yml
@@ -1,22 +1,10 @@
 ---
 
 # Java source package information
-# Get download url from http://www.oracle.com/technetwork/java/javase/downloads/index.html
+java_package_name: "jdk-8u181-linux-x64.rpm"
 
-java_build_name: "jdk1.8.0_172"
-
-java_package_name: "jdk-8u172-linux-x64.tar.gz"
-
-download_url: http://download.oracle.com/otn-pub/java/jdk/8u172-b11/a58eab1ec242421181065cdc37240b08/jdk-8u172-linux-x64.tar.gz
-
-java_build_path: "/tmp/{{ java_build_name }}"
+download_url: "http://download.oracle.com/otn-pub/java/jdk/8u181-b13/96a7b8442fe848ef90c96a2fad6ed6d1/jdk-8u181-linux-x64.rpm"
 
 java_package_path: "/tmp/{{ java_package_name }}"
 
-#  Java home directory information
-
-java_src_dir: "java-8-oracle"
-
-java_home: "/usr/lib/jvm/{{ java_src_dir }}"
-
-java_src_root: "/usr/lib/jvm"
+java_home: "/usr/java/jdk1.8.0_181-amd64/jre"
