--- a/roles/java8/molecule/default/molecule.yml
+++ b/roles/java8/molecule/default/molecule.yml
@@ -22,6 +22,17 @@ provisioner:
     name: ansible-lint
 scenario:
   name: default
+  test_sequence:
+    - destroy
+    - dependency
+    - syntax
+    - create
+    - prepare
+    - converge
+    #- idempotence
+    #- side_effect
+    - verify
+    - destroy
 verifier:
   name: testinfra
   lint:
