--- a/roles/tomcat/tasks/setup-java-RedHat.yml
+++ b/roles/tomcat/tasks/setup-java-RedHat.yml
@@ -7,6 +7,8 @@
 -
   command: "wget --no-cookies --no-check-certificate --header \"Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie\" \"{{download_url}}\" -P /tmp"
   name: "Download java source file"
+  args:
+    warn: False
   tags:
     - download_java
 -
