--- a/roles/tomcat/molecule/default/molecule.yml
+++ b/roles/tomcat/molecule/default/molecule.yml
@@ -23,6 +23,10 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     capabilities:
       - SYS_ADMIN
+    exposed_ports:
+      - 8080/tcp
+    published_ports:
+      - 0.0.0.0:8080:8080/tcp
   - name: Ubuntu
     image: solita/ubuntu-systemd
     image_version: latest
@@ -38,6 +42,10 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     capabilities:
       - SYS_ADMIN
+    exposed_ports:
+      - 8080/tcp
+    published_ports:
+      - 0.0.0.0:8081:8080/tcp
 provisioner:
   name: ansible
   lint:
