added wget installation

--- a/roles/jenkins/tasks/setup-RedHat.yml
+++ b/roles/jenkins/tasks/setup-RedHat.yml
@@ -1,5 +1,10 @@
 ---
 -
+  name: "Install necssary package"
+  yum:
+    name: wget
+    state: present
+-
   name: "Enable nginx repo."
   tags:
     - install_nginx
