moved test dependency to separate OS variable

--- a/roles/jenkins/vars/Debian.yml
+++ b/roles/jenkins/vars/Debian.yml
@@ -1,4 +1,9 @@
 ---
+# Dependency
+test_required_libs:
+    - net-tools
+    - openssh-client
+
 # Java config variable
 oracle_java_version: 8
 oracle_java_cache_valid_time: 3600
