--- a/roles/jenkins/vars/RedHat.yml
+++ b/roles/jenkins/vars/RedHat.yml
@@ -1,4 +1,9 @@
 ---
+# Dependency
+test_required_libs:
+    - net-tools
+    - openssh-clients
+
 # Java config variable
 java_package_name: "jdk-8u181-linux-x64.rpm"
 download_url: "http://download.oracle.com/otn-pub/java/jdk/8u181-b13/96a7b8442fe848ef90c96a2fad6ed6d1/jdk-8u181-linux-x64.rpm"
