added nginx handler

--- a/roles/jenkins/handlers/main.yml
+++ b/roles/jenkins/handlers/main.yml
@@ -8,5 +8,8 @@
 - name: reload systemd
   command: systemctl daemon-reload
 
+- name: start nginx
+  service: name=nginx state=started enabled=yes
+
 - name: restart nginx
   service: name=nginx state=restarted
