reordered and apllied lint of handlers

--- a/roles/jenkins/handlers/main.yml
+++ b/roles/jenkins/handlers/main.yml
@@ -1,15 +1,16 @@
 ---
-- name: restart tomcat
-  service: name=tomcat state=restarted
-
-- name: enable tomcat
-  service: name=tomcat state=started enabled=yes
-
-- name: reload systemd
-  command: systemctl daemon-reload
-
-- name: start nginx
-  service: name=nginx state=started enabled=yes
-
-- name: restart nginx
-  service: name=nginx state=restarted
+-
+  command: "systemctl daemon-reload"
+  name: "reload systemd"
+-
+  name: "restart tomcat"
+  service: "name=tomcat state=restarted"
+-
+  name: "enable tomcat"
+  service: "name=tomcat state=started enabled=yes"
+-
+  name: "enable nginx"
+  service: "name=nginx state=started enabled=yes"
+-
+  name: "restart nginx"
+  service: "name=nginx state=restarted"
