added nginx task and reorganized existing tasks

--- a/roles/tomcat/tasks/setup-Debian.yml
+++ b/roles/tomcat/tasks/setup-Debian.yml
@@ -31,3 +31,10 @@
   name: "Ensure Java is installed"
   tags:
     - install_java
+-
+  name: "Install nginx"
+  apt:
+    name: nginx
+    state: present
+  tags:
+    - install_nginx
