--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -3,11 +3,12 @@
   include_vars: "{{ ansible_os_family }}.yml"
   name: "Include OS-Specific variables"
 -
-  include_tasks: setup-java-RedHat.yml
+  include_tasks: setup-RedHat.yml
   when: "ansible_os_family == 'RedHat'"
 -
-  include_tasks: setup-java-Debian.yml
+  include_tasks: setup-Debian.yml
   when: "ansible_os_family == 'Debian'"
-
 -
   include_tasks: tomcat.yml
+-
+  include_tasks: nginx.yml
