--- a/roles/tomcat/vars/Debian.yml
+++ b/roles/tomcat/vars/Debian.yml
@@ -1,11 +1,19 @@
 ---
-#
-# Default variables for Debian-based Linux distributions.
-#
+# Dependency
+test_required_libs:
+    - net-tools
+    - openssh-client
+
+# Java config variable
 oracle_java_version: 8
-
 oracle_java_cache_valid_time: 3600
-
 oracle_java_home: "/usr/lib/jvm/java-{{ oracle_java_version }}-oracle"
-
 oracle_java_state: latest
+
+# Nginx config variable
+nginx_user: www-data
+nginx_root_dir: /etc/nginx
+nginx_config_path: /etc/nginx/nginx.conf
+app_config_path: /etc/nginx/sites-available/default
+app_config_path_link: /etc/nginx/sites-enabled/default
+nginx_config_root: /etc/nginx/sites-enabled
