--- a/roles/tomcat/vars/RedHat.yml
+++ b/roles/tomcat/vars/RedHat.yml
@@ -1,10 +1,19 @@
 ---
+# Dependency
+test_required_libs:
+    - net-tools
+    - openssh-clients
 
-# Java source package information
+# Java config variable
 java_package_name: "jdk-8u181-linux-x64.rpm"
-
 download_url: "http://download.oracle.com/otn-pub/java/jdk/8u181-b13/96a7b8442fe848ef90c96a2fad6ed6d1/jdk-8u181-linux-x64.rpm"
-
 java_package_path: "/tmp/{{ java_package_name }}"
-
 java_home: "/usr/java/jdk1.8.0_181-amd64/jre"
+
+# Nginx config variable
+nginx_user: nginx
+nginx_root_dir: /etc/nginx
+nginx_config_path: /etc/nginx/nginx.conf
+app_config_path: /etc/nginx/config/app.conf
+app_config_path_link: /etc/nginx/conf.d/default.conf
+nginx_config_root: /etc/nginx/conf.d
