--- a/roles/tomcat/vars/main.yml
+++ b/roles/tomcat/vars/main.yml
@@ -1,16 +1,18 @@
 ---
 # Tomcat Version Download
 
-#tomcat_version: "8.5.9"
 tomcat_version: "9.0.4"
 tomcat_build_name: "apache-tomcat-{{ tomcat_version }}"
 tomcat_package: "{{ tomcat_build_name }}.tar.gz"
 tomcat_url: "https://archive.apache.org/dist/tomcat/tomcat-{{ tomcat_version[0:1] }}/v{{ tomcat_version }}/bin/{{ tomcat_package }}"
+jenkins_url: http://mirrors.jenkins.io/war-stable/latest/jenkins.war
+jenkins_password_path: "{{ jenkins_home_path }}/secrets/initialAdminPassword"
 
 # Tomcat installation directory
 
-tomcat_home_dir: "/opt/{{ tomcat_build_name }}"
+tomcat_home_dir: /opt/tomcat
 tomcat_app_path: /usr/share/tomcat
+jenkins_home_path: /opt/tomcat
 
 # Tomcat user and group
 
@@ -66,3 +68,9 @@ tomcat_users: [
 
 admin_username: admin         #later this one will be colected from ansible vault
 admin_password: adminsecret   #later this one will be colected from ansible vault
+
+# Web Application Configurations
+
+app_port: 8080
+access_log: /var/log/nginx/access.log
+error_log: /var/log/nginx/error.log
