added goss verifier config

--- a/roles/tomcat/molecule/default/molecule.yml
+++ b/roles/tomcat/molecule/default/molecule.yml
@@ -65,5 +65,11 @@ scenario:
     - destroy
 verifier:
   name: testinfra
+  enabled: True
   lint:
     name: flake8
+verifier:
+  name: goss
+  enabled: False
+  lint:
+    name: yamllint
