--- a/roles/php-nginx/vars/main.yml
+++ b/roles/php-nginx/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # Web Application Configurations
 
-app_port: 8080
+app_root: /var/www/app
 access_log: /var/log/nginx/access.log
 error_log: /var/log/nginx/error.log
